# bulk-deconvolution

./: .gitignore  main.py  pyproject.toml
notebook/: cleaned-up.ipynb  log_mu.csv  log_theta.csv  scratch.ipynb
src/: models.py  pseudobulk.py  utils.py
