[project]
name = "bulk-deconvolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.4",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyro-ppl>=1.9.1",
    "scanpy>=1.11.3",
    "scikit-learn>=1.7.0",
    "scikit-misc>=0.5.1",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
